# tencentcloud-iot-explorer-ble-sdk-embedded-demo

./: README.md
LLSync标准蓝牙认证模版/: ble_qiot_template.c  ble_qiot_template.h  data_template.json  date_template.json
qcloud-iot-ble-esp32/: readme.md  sdkconfig
qcloud-iot-ble-esp32/components/qcloud_llsync/: CMakeLists.txt
qcloud-iot-ble-esp32/components/qcloud_llsync/date_template/: ble_qiot_template.c  ble_qiot_template.h  esp32.json
qcloud-iot-ble-esp32/components/qcloud_llsync/hal/: ble_qiot_ble_device.c  ble_qiot_config.h
qcloud-iot-ble-esp32/main/: app_main.c
qcloud-iot-ble-nrf52832/: main.c  readme.md
qcloud-iot-ble-nrf52832/date_template/: ble_qiot_template.h
qcloud-iot-ble-nrf52832/hal/: ble_qiot_ble_device.c  ble_qiot_config.h  nrf52832_xxaa_service.c
qcloud-iot-ble-nrf52832/pca10040/s132/arm5_no_packs/: JLinkLog.txt  LLSync_Nrf52832.uvguix.esma  LLSync_Nrf52832.uvoptx  LLSync_Nrf52832.uvprojx
qcloud-llsync-config-net-esp32/: readme.md  sdkconfig  sdkconfig.old
qcloud-llsync-config-net-esp32/components/qcloud_iot_c_sdk/: CMakeLists.txt
qcloud-llsync-config-net-esp32/components/qcloud_iot_c_sdk/platform/: HAL_Device_freertos.c  HAL_OS_freertos.c  HAL_Timer_freertos.c
qcloud-llsync-config-net-esp32/components/qcloud_iot_c_sdk/sdk_src/: data_template_client_common.c  data_template_client_manager.c  data_template_event.c  json_token.c  mqtt_client_publish.c  mqtt_client_subscribe.c  mqtt_client_unsubscribe.c  mqtt_client_yield.c  qcloud_wifi_config.c
qcloud-llsync-config-net-esp32/components/qcloud_iot_c_sdk/sdk_src/internal_inc/: qcloud_wifi_config.h  utils_list.h
qcloud-llsync-config-net-esp32/components/qcloud_llsync/: CMakeLists.txt
qcloud-llsync-config-net-esp32/components/qcloud_llsync/date_template/: ble_qiot_template.h
qcloud-llsync-config-net-esp32/components/qcloud_llsync/hal/: ble_qiot_ble_device.c  ble_qiot_ble_service.c  ble_qiot_config.h
qcloud-llsync-config-net-esp32/main/: app_main.c  wifi_config_sample.c
qcloud-llsync-dual-comm/components/qcloud_iot_c_sdk/: CMakeLists.txt  Kconfig
qcloud-llsync-dual-comm/components/qcloud_iot_c_sdk/include/: config.h
qcloud-llsync-dual-comm/components/qcloud_iot_c_sdk/platform/: HAL_BTCombo_config.c  HAL_Device_freertos.c  HAL_Wifi_api.c
qcloud-llsync-dual-comm/components/qcloud_iot_c_sdk/sdk_src/: data_template_action.c  mqtt_client.c  qcloud_wifi_config_error_handle.c  qcloud_wifi_config_log_handle.c  utils_list.c
qcloud-llsync-dual-comm/components/qcloud_llsync/: CMakeLists.txt
qcloud-llsync-dual-comm/main/: CMakeLists.txt  app_main.c  wifi_config_sample.c
(+14 files in other folders)
